fixed broken view-details-btn on product details page

--- a/app/templates/main/product_detail.html
+++ b/app/templates/main/product_detail.html
@@ -282,7 +282,7 @@
                             <p class="product-stock out-of-stock">✗ Out of Stock</p>
                         {% endif %}
                         
-                        <a href="/product/{{ p.id }}" class="btn btn-block">
+                        <a href="/products/{{ p.id }}" class="btn btn-block">
                             View Details
                         </a>
                     </div>
@@ -338,7 +338,7 @@
                             <p class="product-stock out-of-stock">✗ Out of Stock</p>
                         {% endif %}
                         
-                        <a href="/product/{{ p.id }}" class="btn btn-block">
+                        <a href="/products/{{ p.id }}" class="btn btn-block">
                             View Details
                         </a>
                     </div>
